# robotics_software_engineer

module_1_assignment/: CMakeLists.txt  Readme.md
module_1_assignment/include/: lib_task3.h
module_1_assignment/src/: task_1.cpp  task_2.cpp  task_3.cpp
module_2_assignment/: CMakeLists.txt  Readme.md  package.xml
module_2_assignment/launch/: control_turtle_speeds.launch.py  spawn_multi_turtle.launch.py  unique_pattern.launch.py
module_2_assignment/src/: control_speeds.cpp  draw_circle.cpp  draw_logspiral.cpp  draw_spiral.cpp  drive_robot.cpp
module_3_assignment/: CMakeLists.txt  Readme.md
module_3_assignment/launch/: ackerman_urdf.launch.py  arm_urdf.launch.py
module_3_assignment/rviz/: ackerman_viz.rviz  arm_viz.rviz
module_3_assignment/urdf/: ackerman_drive.urdf.xacro  robotic_arm.urdf.xacro
module_4_assessment/: Readme.md
module_4_assessment/module_4_assignment/: CMakeLists.txt
module_4_assessment/module_4_assignment/launch/: get_imu_data.launch.py  wall_following_world.launch.py
module_4_assessment/module_4_assignment/models/maze_world/maze_world/: model.sdf
module_4_assessment/module_4_assignment/models/square_maze/: model.sdf
module_4_assessment/module_4_assignment/models/square_maze_world/square_maze_world/: model.config  model.sdf
module_4_assessment/module_4_assignment/src/: imu_data.cpp  wall_following.cpp
module_4_assessment/module_4_assignment/worlds/: square_maze.world
module_4_assessment/robot_sensing_debug/: CMakeLists.txt
module_4_assessment/robot_sensing_debug/launch/: camera_line_following.launch.py
module_4_assessment/robot_sensing_debug/src/: line_following_with_camera.cpp  maze_solving_with_lidar.cpp
module_4_assessment/robot_sensing_debug/worlds/: line_following.world
